# AlNiCo

./: .gitignore  README.md
ATC22AE/scripts/: clean_data_all.sh  fig10_zipf_varing.sh  fig5_a.sh  fig5_b.sh  fig5_c.sh  fig5_d_e_f.sh  fig5_throughput.sh  fig6_tpcc_lat.sh  fig7_HOT_dynamic.sh  fig8_CC_protocol.sh  fig8_CC_signle.sh  fig9_rpc.sh  plot.gp
AlNiCo_Server/sto/: .gitignore  ATC_p1_a_tpcc_low_NetSTO.sh  ATC_p3_dynamic_NetSTO.sh  (+42 more)
AlNiCo_Server/sto/masstree-beta/: CMakeLists.txt  GNUmakefile.in  compiler.hh  configure.ac  kvthread.cc  masstree.hh  masstree_get.hh  masstree_scan.hh  masstree_split.hh  masstree_struct.hh  masstree_tcursor.hh
Clients/NetTx/: .gitignore  CMakeLists.txt  README.md  hot.txt
Clients/NetTx/NicTxn/: CMakeLists.txt  cross_all.cpp  fpga.cpp  model_update.cpp  nictxn_as_client.cpp  nictxn_as_server.cpp  nictxn_null_rpc.cpp  nictxn_rpc.cpp  nictxn_tx.cpp  tpcc_procedure.cpp  virtual_fpga.cpp
Clients/NetTx/NicTxn/include/: fpga.h  model_update.h  nictxn_rpc.h  sample.h
Clients/NetTx/rdma_rpc/: CMakeLists.txt
Clients/NetTx/rdma_rpc/rdma/: Operation.cpp  Resource.cpp  StateTrans.cpp
Clients/NetTx/rdma_rpc/rdma/include/: Rdma.h
Clients/NetTx/rdma_rpc/rpc/: rpc.cpp  rpc_util.cpp
Clients/NetTx/rdma_rpc/rpc/include/: rpc.h  rpc_struct.h
Clients/NetTx/script/: hot_pic_zipf.sh  hot_pic_zipf_partition.sh  hot_pic_zipf_strife.sh  init_memcached.sh  loop_pressure.sh  loop_pressure_c.sh  p5_nic.sh  p5_nic_lat.sh  p5_null_rpc.sh  p5_null_rpc_lat.sh  tpcc_pic_cpu_client.sh  tpcc_pic_cpu_client20.sh  tpcc_pic_cpu_client_20zipf.sh  tpcc_pic_cpu_client_2pl.sh  tpcc_pic_cpu_client_SPNIC2.sh  tpcc_pic_cpu_client_SPNIC20.sh  tpcc_pic_cpu_client_SPNIC20_zipf.sh  tpcc_pic_cpu_client_SPNIC20_zipf_warehouse.sh  tpcc_pic_cpu_client_strife.sh  tpcc_pic_cpu_client_strife20.sh  tpcc_pic_cpu_client_strife20_zipf.sh  ycsb_pic_zipf.sh  ycsb_pic_zipf_partition.sh  ycsb_pic_zipf_strife.sh
Clients/NetTx/storage/: CMakeLists.txt  mystorage.cpp
Clients/NetTx/storage/include/: mystorage.h  tpcc_common.h  tpcc_schema.h
Clients/NetTx/strife/: CMakeLists.txt  strife_rpc.cpp
Clients/NetTx/strife/include/: strife_rpc.h
Clients/NetTx/switch_msg/: CMakeLists.txt  ControlConnection.cpp  SwitchTxCommon.cpp  TxFlowSteering.cpp
Clients/NetTx/switch_msg/include/: ControlConnection.h  SwitchTxCommon.h
Clients/NetTx/test/: CMakeLists.txt  L_size.cpp  NICTX_client.cpp  hash_function.cpp  hash_test.cpp  strife_client.cpp  test_main.cpp
Clients/NetTx/transaction/: CMakeLists.txt  Transaction.cpp
Clients/NetTx/transaction/include/: Transaction.h
Clients/NetTx/tx_rpc/: CMakeLists.txt  tx_exe.cpp  tx_rpc.cpp
Clients/NetTx/tx_rpc/include/: tx_rpc.h
Clients/NetTx/utils/: CMakeLists_nictxn.in  utils.cpp
Clients/NetTx/utils/include/: Debug.h  HugePageAlloc.h  latency_evaluation.h  timer.h  utils.h  zipf.h
Clients/NetTx/workload_tpcc/: CMakeLists.txt  tpcc_loader.cpp
Clients/NetTx/workload_tpcc/include/: tpcc_loader.h
Innova2/: Innova2.md
(+333 files in other folders)
